Added boilerplate HTML and began page content

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <header>
             <h1>Discover hidden places in the world around you</h1>
+            <p><a>Download Excursion (Coming soon!)</a></p>
         </header>
         <main>
             
