style and html updates

--- a/index.html
+++ b/index.html
@@ -3,16 +3,31 @@
 
     <head>
         <title>Excursion</title>
-        <link href="./style.css" type="text/css" rel="stylesheet">
+        <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
     </head>
 
     <body>
         <header>
             <h1>Discover hidden places in the world around you</h1>
-            <p><a>Download Excursion (Coming soon!)</a></p>
+            <a>Download Excursion (Coming soon!)</a>
         </header>
         <main>
-            
+            <p>
+                <video src="./resources/videos/excursion.mp4" autoplay>Video not supported</video>
+            </p>
+            <h2>Your personal travel guide</h2>
+            <p>Excusion remembers places you like, and recommends new points of interest around you.</p>
+            <p>
+                <img src="./resources/images/campsite.png" alt="campsite image" />
+            </p>
+            <p>
+                <img src="./resources/images/phoneicon.png" alt="phone icon" />
+            </p>
+            <h2>Coming Soon for iPhone and Android</h2>
+            <a>Download Excursion (Coming soon!)</a>
         </main>
+        <footer>
+            <h3>&copy; Excursion</h3>
+        </footer>
     </body>
 </html>
